Updated Java to 11 and updated JCTools to 4.0.2